--- a/_includes/css/screen.sass
+++ b/_includes/css/screen.sass
@@ -1,4 +1,5 @@
 $blue: #0098D4
+$light-blue: #d4f3ff
 $orange: #E28000
 $charcoal: #333333
 $grey: #cccccc
@@ -75,6 +76,7 @@ p
 	background-image: url(assets/texture.jpg)
 	background-size: cover
 	background-position: center
+	background-color: $light-blue
 	&_logo
 		display: block
 		margin: 0 auto
@@ -85,7 +87,7 @@ p
 .banner
 	margin-bottom: 64px
 	padding: 16px
-	background-color: lighten($blue, 50%)
+	background-color: $light-blue
 	&_text
 		color: $blue
 		font-size: 18px	
@@ -136,36 +138,6 @@ p
 			border-bottom: 1px solid $grey
 			padding: 16px
 			margin-top: -1px
-
-
-	// table 
-	// 	border-collapse: collapse
-	// 	max-width: 100%
-	// 	border: 0 none
-	// 	margin: auto
-
-	// 	overflow-wrap: break-word
-	// 	word-wrap: break-word
-	// 	-ms-word-break: break-all
-	// 	word-break: break-word
-	// 	-ms-hyphens: auto
-	// 	-moz-hyphens: auto
-	// 	-webkit-hyphens: auto
-	// 	hyphens: auto
-
-	// td, th 
-	// 	border: 1px solid #ccc
-	// 	padding: 8px
-	// 	vertical-align: top
-	// 	@media (min-width: 480px)
-	// 		padding: 16px
-
-	// th 
-	// 	text-align: right
-
-
-	// td 
-	// 	text-align: left
 
 
 .contact
